--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,10 @@
 body {
   margin: 0;
   padding: 0;
-  width: 100%;
-  height: 100vh;
   overflow: hidden;
+}
+
+#root {
+  height: 100vh;
+  width: 100vw;
 }
